Added to portfolio and changed styling

--- a/src/template.html
+++ b/src/template.html
@@ -111,31 +111,29 @@
 
           <!-- Each .row is a project -->
           <div class="row">
-            <div class="col-lg-4 col-sm-12">
+            <div class="col-lg-7 col-sm-12 d-flex align-items-center">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Robofriends</h3>
+                <h3 class="project-wrapper__text-title text-center">Robofriends</h3>
                 <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet congsectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                  <p class="mb-4 text-center">
+                    Project using React and external APIs to create a searchable database of users. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
-                </a>
+                <div class="d-flex justify-content-center">
+                  <a target="_blank" class="cta-btn cta-btn--hero" href="https://rebeccachavezlv.github.io/robotfriends/">
+                    See Live
+                  </a>
+                  <a target="_blank" class="cta-btn text-color-main" href="https://github.com/rebeccachavezlv/robotfriends">
+                    Source Code
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="col-lg-8 col-sm-12">
+            <div class="col-lg-5 col-sm-12">
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/Robofriends Logo.png"/>
                   </div>
                 </a>
               </div>
@@ -145,31 +143,29 @@
 
           <!-- Each .row is a project -->
           <div class="row">
-            <div class="col-lg-4 col-sm-12">
+            <div class="col-lg-7 col-sm-12 align-self-center order-2">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title text-center">CSS Background Generator</h3>
                 <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                  <p class="mb-4 text-center">
+                    Project using HTML and CSS. Generator that creates a code for, and displays, a CSS gradient background. Colors can be manually input, or randomized.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
-                </a>
+                <div class="d-flex justify-content-center">
+                  <a target="_blank" class="cta-btn cta-btn--hero" href="https://rebeccachavezlv.github.io/robotfriends/">
+                    See Live
+                  </a>
+                  <a target="_blank" class="cta-btn text-color-main" href="https://github.com/rebeccachavezlv/robotfriends">
+                    Source Code
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="col-lg-8 col-sm-12">
+            <div class="col-lg-5 col-sm-12">
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/CSS Logo.png"/>
                   </div>
                 </a>
               </div>
@@ -179,31 +175,29 @@
 
           <!-- Each .row is a project -->
           <div class="row">
-            <div class="col-lg-4 col-sm-12">
+            <div class="col-lg-7 col-sm-12 align-self-center">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title text-center">Robofriends</h3>
                 <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                  <p class="mb-4 text-center">
+                    Project using React and external APIs to create a searchable database of users. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
-                </a>
+                <div class="d-flex justify-content-center">
+                  <a target="_blank" class="cta-btn cta-btn--hero" href="https://rebeccachavezlv.github.io/robotfriends/">
+                    See Live
+                  </a>
+                  <a target="_blank" class="cta-btn text-color-main" href="https://github.com/rebeccachavezlv/robotfriends">
+                    Source Code
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="col-lg-8 col-sm-12">
+            <div class="col-lg-5 col-sm-12">
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/Robofriends Logo.png"/>
                   </div>
                 </a>
               </div>
@@ -249,10 +243,10 @@
           <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/rebecca-chavez-6979461b2/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/rebeccachavezlv" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -263,28 +257,6 @@
         <p class="footer__text">
           © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
           </a>
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
         </p>
       </div>
     </footer>
