added headshot. more style changes

--- a/src/template.html
+++ b/src/template.html
@@ -51,7 +51,7 @@
           I'm a Web Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Find out more</a>
         </p>
       </div>
     </div>
@@ -70,7 +70,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="./assets/Headshot-1.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -152,10 +152,10 @@
                   </p>
                 </div>
                 <div class="d-flex justify-content-center">
-                  <a target="_blank" class="cta-btn cta-btn--hero" href="https://rebeccachavezlv.github.io/robotfriends/">
+                  <a target="_blank" class="cta-btn cta-btn--hero" href="https://rebeccachavezlv.github.io/cssbackgroundgenerator">
                     See Live
                   </a>
-                  <a target="_blank" class="cta-btn text-color-main" href="https://github.com/rebeccachavezlv/robotfriends">
+                  <a target="_blank" class="cta-btn text-color-main" href="https://github.com/rebeccachavezlv/cssbackgroundgenerator">
                     Source Code
                   </a>
                 </div>
