--- a/src/template.html
+++ b/src/template.html
@@ -20,9 +20,9 @@
     <!-- Put here your site title -->
     <title>Rebecca Chavez | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="Rebecca Chavez, rebeccachavezlv, JavaScript" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Rebecca Chavez | Developer" />
 
     <!-- Required librarys -->
     <link
@@ -34,9 +34,6 @@
       ScrollReveal({ reset: false });
     </script>
 
-    <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-  </head>
 
   <!-- Follow the HTML instructions to create your stunning portfolio website -->
   <body>
@@ -51,8 +48,18 @@
           I'm a Web Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Find out more</a>
+          <a class="cta-btn cta-btn--hero mr-3" href="#about">About Me</a>
+          <a class="cta-btn cta-btn--hero mr-3" href="#projects">My Projects</a>
+          <a class="cta-btn cta-btn--hero" href="#contact">Contact</a>
         </p>
+        <div class="social-links">
+          <a href="https://www.linkedin.com/in/rebecca-chavez-6979461b2/" target="_blank">
+            <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/rebeccachavezlv" target="_blank">
+            <i class="fa fa-github fa-lg"></i>
+          </a>
+        </div>
       </div>
     </div>
     <!-- /END Hero Section -->
@@ -78,21 +85,19 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                Hi! My name is Rebecca Chavez, and I'm an intermediate web developer with experience in HTML, CSS, JavaScript, React.js, and more!
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                Having spent almost a decade in advertising and media production, the transition into the role of a web developer role has been seamless, and exciting. As a lifetime learner that is consistently aiming to become better, I'm looking forward to finding out how I can help you and your team on your next project!
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a class="cta-btn cta-btn--resume mr-3" href="#projects">
+                  View Projects
+                </a>
+                <a target="_blank" class="cta-btn cta-btn--resume mr-3" href="#!" hidden>
                   View Resume
                 </a>
+                <a class="cta-btn cta-btn--resume" href="#contact">Contact</a>
               </span>
             </div>
           </div>
@@ -131,7 +136,7 @@
             </div>
             <div class="col-lg-5 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://rebeccachavezlv.github.io/ISSFinder/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/ISS logo.png"/>
                   </div>
@@ -163,7 +168,7 @@
             </div>
             <div class="col-lg-5 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://rebeccachavezlv.github.io/cssbackgroundgenerator" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/CSS Logo.png"/>
                   </div>
@@ -195,7 +200,7 @@
             </div>
             <div class="col-lg-5 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://rebeccachavezlv.github.io/robotfriends/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/Robofriends Logo.png"/>
                   </div>
@@ -217,14 +222,17 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            Send me an e-mail!
+            Email:
+            <a href ='mailto:rebeccachavezlv@gmail.com'>rebeccachavezlv@gmail.com</a>
           </p>
-          <a
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="rebeccachavezlv@gmail.com"
-            >Call to Action</a
-          >
+        </div>
+        <div class="social-links">
+          <a href="https://www.linkedin.com/in/rebecca-chavez-6979461b2/" target="_blank">
+            <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/rebeccachavezlv" target="_blank">
+            <i class="fa fa-github fa-lg"></i>
+          </a>
         </div>
       </div>
     </section>
@@ -236,21 +244,18 @@
         <a href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="social-links">
-          <a href="https://www.linkedin.com/in/rebecca-chavez-6979461b2/" target="_blank">
-            <i class="fa fa-linkedin fa-inverse"></i>
-          </a>
-          <a href="https://github.com/rebeccachavezlv" target="_blank">
-            <i class="fa fa-github fa-inverse"></i>
-          </a>
-        </div>
 
-        <hr />
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+          © 2020
+        </p>
+        <p class="footer__text">
+          Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
           </a>
+        </p>
+        <p class="footer__text">
+          Customized by <a href="https://github.com/rebeccachavezlv" target='_blank'>Rebecca Chavez</a>
         </p>
       </div>
     </footer>
