fixing image name

--- a/src/template.html
+++ b/src/template.html
@@ -138,7 +138,7 @@
               <div class="project-wrapper__image">
                 <a href="https://rebeccachavezlv.github.io/ISSFinder/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/ISS logo.png"/>
+                    <img class="img-fluid" src="./assets/ISS_logo.png"/>
                   </div>
                 </a>
               </div>
