fixing all images

--- a/src/template.html
+++ b/src/template.html
@@ -170,7 +170,7 @@
               <div class="project-wrapper__image">
                 <a href="https://rebeccachavezlv.github.io/cssbackgroundgenerator" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/CSS Logo.png"/>
+                    <img class="img-fluid" src="./assets/CSS_Logo.png"/>
                   </div>
                 </a>
               </div>
@@ -202,7 +202,7 @@
               <div class="project-wrapper__image">
                 <a href="https://rebeccachavezlv.github.io/robotfriends/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/Robofriends Logo.png"/>
+                    <img class="img-fluid" src="./assets/Robofriends_Logo.png"/>
                   </div>
                 </a>
               </div>
