fixed about me typo

--- a/src/template.html
+++ b/src/template.html
@@ -88,7 +88,7 @@
                 Hi! My name is Rebecca Chavez, and I'm an intermediate web developer with experience in HTML, CSS, JavaScript, React.js, and more!
               </p>
               <p class="about-wrapper__info-text">
-                Having spent almost a decade in advertising and media production, the transition into the role of a web developer role has been seamless, and exciting. As a lifetime learner that is consistently aiming to become better, I'm looking forward to finding out how I can help you and your team on your next project!
+                Having spent almost a decade in advertising and media production, the transition into the role of a web developer has been seamless, and exciting. As a lifetime learner that is consistently aiming to become better, I'm looking forward to finding out how I can help you and your team on your next project!
               </p>
               <span class="d-flex mt-3">
                 <a class="cta-btn cta-btn--resume mr-3" href="#projects">
