working on load issue

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
   For business & inquires, contact me -> jacobojavier98@gmail.com
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html id="html" lang="en" hidden>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
